Fixed titleCard spacing

--- a/src/components/projectComponents/titleCard/styles.css
+++ b/src/components/projectComponents/titleCard/styles.css
@@ -49,6 +49,6 @@
     transform: scale(1.02);
   }
   100% {
-    transform: scale(1.44);
+    transform: scale(1.4);
   }
 }
